argocd/manifests/kioto/base/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: kioto-postgres
  namespace: kioto
spec:
  selector:
    app: kioto-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
