argocd/manifests/kioto/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kioto
  namespace: kioto
spec:
  selector:
    app: kioto
  ports:
    - name: http
      port: 4110
      targetPort: 4110
